2009-09-03  Ben Murdoch  <benm@google.com>

https://bugs.webkit.org/show_bug.cgi?id=28872
        Test to verify statement error callbacks behave as expected when they return true or throw an exception.

        * storage/statement-error-callback-expected.txt: Added with properties svn:eol-style.
        * storage/statement-error-callback.html: Added with properties svn:eol-style.
2009-09-03  Ben Murdoch  <benm@google.com>

        https://bugs.webkit.org/show_bug.cgi?id=28872

        Fixes a bug where handleEvent() in the V8 Custom SQL Statement Error binding would not return the correct result to WebCore after invoking the callback.

        Test: storage/statement-error-callback.html

        * bindings/v8/custom/V8CustomSQLStatementErrorCallback.cpp:
        (WebCore::V8CustomSQLStatementErrorCallback::handleEvent): Return true from handleEvent() if the callback raised an exception or the callback itself returned true.

Canonical link: https://commits.webkit.org/39584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48008 268f45cc-cd09-0410-ab3c-d52691b4dbfc